--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <h1>授業記録フォーム</h1>
 
   <h2>① 授業前の計画</h2>
-  <iframe src="https://forms.gle/NFCDVH9FK38BBW1A6></iframe>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsaUWeJqx_aEs5xniPhLLy8qNHUnjcYFx3bipXpt30SBQYfA/viewform?usp=dialog"></iframe>
 
   <h2>② 授業後の振り返り</h2>
-  <iframe src="https://forms.gle/P3encpYsyBez4kCcA" allowfullscreen></iframe>
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdispcAwSlTOkCj4QXI93UJ77LzY3NwOdE-Zi9mdCGzvNXzMg/viewform?usp=dialog" allowfullscreen></iframe>
 </body>
 </html>
