--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
   <h1>授業記録フォーム</h1>
 
   <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSdsaUWeJqx_aEs5xniPhLLy8qNHUnjcYFx3bipXpt30SBQYfA/viewform?usp=dialog" target="_blank">
-    🌱 授業前の計画を立てる
+    🌱 学習の計画を立てる
   </a>
 
   <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSdispcAwSlTOkCj4QXI93UJ77LzY3NwOdE-Zi9mdCGzvNXzMg/viewform?usp=dialog" target="_blank">
-    🌿 授業後の振り返りを記入する
+    🌿 学習後の振り返りを記入する
   </a>
 </body>
 </html>
